@@ -30,7 +30,7 @@ Scott HANNAHS: patch
 Sergio MERINO: patch
 Vincent KNECHT: wording patch
 Barius DRUBECK: documentation patch
-Stéphane URBANOVSKI: patch
+Stéphane URBANOVSKI: patchs
 Jerome LEBASE: Solaris patches
 David DURIEUX: developer
 François MERMET: HP-UX support
