@@ -31,6 +31,7 @@ Revision history for FusionInventory::Agent
        * HP-UX/Memory: hack to preinitialize the memory map (Yanick Durant)
        * t/README.t: only run the test if TEST_AUTHOR=1
        * Makefile.PL: add XML::TreePP in test_requires
+       * RPM: feed the PUBLISHER field (Stéphane Urbanovski)
 
 2.1.7  Sun, 12 Dec 2010 20:05:16 +01000
        * RPC: Better message if access is denied
